...
        )

        let healthComp = PlayerHealthComponent(currentHealth: 3, maxHealth: 3)
        self.healthComponent = healthComp

        self.renderComponent = RenderComponent(
            renderType: .sprite(spriteName: "Player"),
            zPosition: Constants.ZPOSITION_PLAYER
        )

        self.animationComponent = AnimationComponent()

        let collisionComp = PlayerCollisionComponent(
...
