...
    static let PLAYER_MOVE_SPEED = 700.0
    static let ENEMY_MOVE_SPEED = 40.0
    static let PROJECTILE_MOVE_SPEED = 1_050.0
    static let ENEMY_SPAWNER_INTERVAL = 50.0

    // View Information
    static let ATTACK_BUTTON_SPRITE = "attack-button"
    static let ATTACK_BUTTON_POSITION = Vector2D(820, -580)
    static let ATTACK_BUTTON_SIZE = Vector2D(175, 175)

    static let JOYSTICK_SPRITE = "joystick-background"
    static let JOYSTICK_POSITION = Vector2D(-820, -580)
    static let JOYSTICK_SIZE = Vector2D(200, 200)
...
